# IMP

./: .gitignore  BAREMETAL_FAILURES.md  BOOT_IMPLEMENTATION_LOG.md  Build_Workflow.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  FLASH_GUIDE.md  Hardware_Config_Guide.md  IMPLEMENTATION_WITH_LINK_SYNTAX.md  IMP_QUICK_CARD.md  IMP_QUICK_START.md  INFERENCE_GUIDE.md  KV260_BOOT_LESSONS.md  KV260_BOOT_PLAN.md  KV260_BOOT_PLAN_v1.5.md  MODELS.md  PETA_LINUX_DOWNLOADS.md  PETA_LINUX_SD_CARD.md  PETA_LINUX_SETUP.md  README.md  RESEARCH.md  RESEARCH_BIBLIOGRAPHY.md  SPEC_v0.1.md  build_imp.tcl  build_sdcard.sh  hardware.toml  kernel.ebv  kernel.toml  linkage.toml  neuralcore.ebv  neuralcore.sv  neuralcore_axi.sv  neuralcore_tb.sv  run_sim.sh  verify_sv.sh
arm/: Cargo.toml  README.md  boot_stub.c  kernel.c  kernel.elf  kernel.rs  kernel_full.c  kernel_minimal.c  linker.ld  memory.ld  startup.s
arm/src/: lib.rs
boot/: boot.bif  boot.cmd  boot.scr  boot_custom.bif  boot_zynqmp.bif  bootgen.bif  build_boot.sh  build_final.sh  build_fsbl.sh  build_on_vivado.sh  build_simple.sh  download_xilinx_boot.sh  som_build_info.txt  system-zynqmp-sck-kv-g-revB.dtb  system.dts
brief-compiler/: ENHANCEMENT_PLAN.md  TARGET_ABSTRACTION.md
scripts/: build_and_deploy.sh  build_kernel.sh  create_sd_card.sh  prepare_model.py
